--- a/config/vanity.yml
+++ b/config/vanity.yml
@@ -7,3 +7,10 @@ test:
   active_record_adapter: default
   collecting: false
 production:
+  active_record_adapter: postgresql
+  <% uri = URI.parse(ENV['DATABASE_URL']) %>
+  host:     <%= uri.host %>
+  username: <%= uri.username %>
+  password: <%= uri.password %>
+  port:     <%= uri.port %>
+  database: <%= uri.path.sub('/', '') %>
