--- a/config/vanity.yml
+++ b/config/vanity.yml
@@ -10,7 +10,7 @@ production:
   active_record_adapter: postgresql
   <% uri = URI.parse(ENV['DATABASE_URL']) %>
   host:     <%= uri.host %>
-  username: <%= uri.username %>
-  password: <%= uri.password %>
-  port:     <%= uri.port %>
-  database: <%= uri.path.sub('/', '') %>
+  # username: <%= ENV['USERNAME'] %>
+  # password: <%= uri.password %>
+  # port:     <%= uri.port %>
+  database: <%= ENV['DATABASE_URL'] %>
