--- a/config/vanity.yml
+++ b/config/vanity.yml
@@ -7,10 +7,8 @@ test:
   active_record_adapter: default
   collecting: false
 production:
-  active_record_adapter: postgresql
-  <% uri = URI.parse(ENV['DATABASE_URL']) %>
-  host:     <%= uri.host %>
-  # username: <%= ENV['USERNAME'] %>
-  # password: <%= uri.password %>
-  # port:     <%= uri.port %>
-  database: <%= ENV['DATABASE_URL'] %>
+  <<: *default
+  database: ahoyanddevise_production
+  username: ahoyanddevise
+  password: <%= ENV['AHOYANDDEVISE_DATABASE_PASSWORD'] %>
+
