added encoding and pool to production config in vanity.yml

--- a/config/vanity.yml
+++ b/config/vanity.yml
@@ -11,4 +11,5 @@ production:
   database: ahoyanddevise_production
   username: ahoyanddevise
   password: <%= ENV['AHOYANDDEVISE_DATABASE_PASSWORD'] %>
-
+  encoding: unicode
+  pool: 5
