--- a/config/database.yml
+++ b/config/database.yml
@@ -13,6 +13,6 @@ test:
 
 production:
   <<: *default
-  database: ahoyanddevise_production
+  database: <%= ENV['DATABASE_URL'] %>
   username: ahoyanddevise
   password: <%= ENV['AHOYANDDEVISE_DATABASE_PASSWORD'] %>
