--- a/config/vanity.yml
+++ b/config/vanity.yml
@@ -8,8 +8,8 @@ test:
   collecting: false
 production:
   <<: *default
-  database: ahoyanddevise_production
-  username: ahoyanddevise
-  password: <%= ENV['AHOYANDDEVISE_DATABASE_PASSWORD'] %>
+  <% uri = URI.parse(ENV['DATABASE_URL']) %>
+  database: <%= ENV['DATABASE_URL'] %>
+  port: <%= ENV['DATABASE_PORT'] %>
   encoding: unicode
-  pool: 5
+  pool:     5
